--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -79,7 +79,7 @@ li {
 
   .container-crypto-tab {
     position: fixed;
-    top: 5em;
+    top: 0;
     left: 10%;
     transition: 0.4s ease-in-out;
   }
