--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -94,3 +94,15 @@ li {
     right: 5px;
   }
 }
+
+.chart {
+  border-radius: 10px;
+  border: 1px solid $bg-color;
+  margin-top: 2em;
+  max-height: 400px;
+  padding-top: 3em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: $primary-text-color;
+}
